[package]
name = "grpc_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.2"
tokio = { version = "1.34.0", features = ["full"] }
tonic-web = "0.10.2"
tower-http = { version = "0.4.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "server"
path = "src/main.rs"